adding instance name

--- a/ec2Provision.yaml
+++ b/ec2Provision.yaml
@@ -18,3 +18,6 @@ Resources:
         Properties:
           InstanceType: !Ref InstanceType
           ImageId: ami-06ddbc40823fba89a
+          Tags:
+               - Value: CloudFormationEc2
+                 Key: Name
